--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "contentful": "^8.5.7",
     "crypto-js": "^4.0.0",
     "generate-password": "^1.6.1",
+    "git-install": "^0.5.2",
     "graphql-request": "^3.5.0",
     "marked": "^3.0.3",
     "moment": "^2.29.1",
